--- a/style.css
+++ b/style.css
@@ -8,19 +8,17 @@
   height: 100vh;
 }
 
-.grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
+.display {
+  grid-column: 1 / span 4;
+  grid-row: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
   font-size: 30px;
 }
 
-.item1 {
-  grid-column: 1 / span 4;
-  grid-row: 1;
-}
-.item20 {
+button[value="equals"] {
   grid-column: 3 / span 2;
   grid-row: 6;
 }
